Fixed state stuck

--- a/src/Agent.css
+++ b/src/Agent.css
@@ -10,6 +10,7 @@
   fill: none;
   stroke: red;
   stroke-dasharray: 5px 5px;
+  opacity: .3;
 }
 
 .Agent text {
